fix(theme-chalk): [dialog] visible transition

--- a/packages/theme-chalk/src/dialog.scss
+++ b/packages/theme-chalk/src/dialog.scss
@@ -22,7 +22,7 @@
 
   &.is-full-screen {
     .#{$namespace}-dialog-original {
-      transform: scale(0.95) translate(0, 8%) !important;
+      transform: translate(0, 8%) !important;
     }
   }
   .#{$namespace}-dialog-original {
